[package]
name = "supercraft"
version = "0.1.0"
authors = ["Joonas Haapala <joonas@haapa.la>"]

[dependencies]
tempdir = "0.3.5"
glium_sdl2 = "0.15"
sdl2 = "0.30"
glium = "0.18"
nalgebra = "0.16"
lmdb-rs = "0.7.6"
serde = "1"
serde_derive = "1"
rmp = "0.8.7"
rmp-serde = "0.13.7"
rayon = { version = "0.8.2" }
byteorder = {version = "0.5.3"}
#uuid = { version = "0.6.5", features = ["v4", "v5", "serde"] }
uuid = { git = "https://github.com/uuid-rs/uuid", features = ["v4", "v5", "serde"] }
noise = "0.5.1"
